--- a/nginx.conf
+++ b/nginx.conf
@@ -2,40 +2,30 @@
 #   * Official English Documentation: http://nginx.org/en/docs/
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
 
-user  nginx;
-worker_processes  1;
-
-error_log  /var/log/nginx/error.log;
-#error_log  /var/log/nginx/error.log  notice;
-#error_log  /var/log/nginx/error.log  info;
-
-pid        /run/nginx.pid;
-
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
-
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    #tcp_nopush     on;
+    sendfile            on;
+    tcp_nopush          on;
+    tcp_nodelay         on;
+    keepalive_timeout   65;
+    types_hash_max_size 2048;
 
-    #keepalive_timeout  0;
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    index   index.html index.htm;
+    include             /etc/nginx/mime.types;
+    default_type        application/octet-stream;
 
     # Load modular configuration files from the /etc/nginx/conf.d directory.
     # See http://nginx.org/en/docs/ngx_core_module.html#include
@@ -44,12 +34,9 @@ http {
 
     server {
         listen       80 default_server;
-        server_name  localhost;
+        listen       [::]:80 default_server;
+        server_name  _;
         root         /usr/share/nginx/html;
-
-        #charset koi8-r;
-
-        #access_log  /var/log/nginx/host.access.log  main;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
@@ -57,16 +44,12 @@ http {
         location / {
         }
 
-        # redirect server error pages to the static page /40x.html
-        #
-        error_page  404              /404.html;
-        location = /40x.html {
+        error_page 404 /404.html;
+            location = /40x.html {
         }
 
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
+        error_page 500 502 503 504 /50x.html;
+            location = /50x.html {
         }
     }
 }
