Set KillMode=process (#1231543)

--- a/nginx.service
+++ b/nginx.service
@@ -8,6 +8,7 @@ PIDFile=/run/nginx.pid
 ExecStartPre=/usr/sbin/nginx -t
 ExecStart=/usr/sbin/nginx
 ExecReload=/bin/kill -s HUP $MAINPID
+KillMode=process
 KillSignal=SIGQUIT
 TimeoutStopSec=5
 PrivateTmp=true
