--- a/nginx.conf
+++ b/nginx.conf
@@ -59,8 +59,8 @@ http {
 # Settings for a TLS enabled server.
 #
 #    server {
-#        listen       443 ssl;
-#        listen       [::]:443 ssl;
+#        listen       443 ssl http2 default_server;
+#        listen       [::]:443 ssl http2 default_server;
 #        server_name  _;
 #        root         /usr/share/nginx/html;
 #
